--- a/src/namesayer/workSpaceCreator.fxml
+++ b/src/namesayer/workSpaceCreator.fxml
@@ -8,42 +8,51 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceCreatorController">
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
    <left>
       <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Select the recordings you want to practice">
-               <font>
-                  <Font size="14.0" />
-               </font>
+            <Pane prefHeight="70.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="1.0" layoutY="25.0" text="Select the recordings you want to practice">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
                <VBox.margin>
-                  <Insets right="10.0" top="25.0" />
+                  <Insets left="20.0" />
                </VBox.margin>
-            </Label>
-            <TextField>
+            </Pane>
+            <TextField fx:id="textField">
                <VBox.margin>
-                  <Insets left="20.0" top="25.0" />
+                  <Insets left="20.0" />
                </VBox.margin>
             </TextField>
-            <ListView prefHeight="325.0" prefWidth="200.0">
+            <ListView fx:id="databaseRecordings" prefHeight="325.0" prefWidth="200.0">
                <VBox.margin>
                   <Insets left="20.0" />
                </VBox.margin>
             </ListView>
-            <Button mnemonicParsing="false" text="Add" />
+            <HBox alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="200.0" spacing="30.0">
+               <children>
+                  <CheckBox fx:id="selectAllBox" mnemonicParsing="false" text="Select All" />
+                  <Button fx:id="addButton" mnemonicParsing="false" onAction="#addToWorkspace" text="Add" />
+               </children>
+            </HBox>
             <HBox alignment="BOTTOM_LEFT" prefHeight="50.0" prefWidth="200.0">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
                <children>
-                  <Button mnemonicParsing="false" text="Cancel">
+                  <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnToMenu" text="Return">
                      <HBox.margin>
                         <Insets bottom="10.0" left="20.0" />
                      </HBox.margin>
@@ -54,36 +63,40 @@
       </VBox>
    </left>
    <right>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Current Workspace">
-               <font>
-                  <Font size="14.0" />
-               </font>
+            <Pane prefHeight="70.0" prefWidth="200.0">
                <VBox.margin>
-                  <Insets top="25.0" />
+                  <Insets right="20.0" />
                </VBox.margin>
-            </Label>
-            <ListView prefHeight="350.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="77.0" layoutY="25.0" text="Current Workspace">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <ListView fx:id="workspaceRecordings" prefHeight="350.0" prefWidth="200.0">
                <VBox.margin>
-                  <Insets right="20.0" top="25.0" />
+                  <Insets right="20.0" />
                </VBox.margin>
             </ListView>
             <HBox prefHeight="75.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" text="Remove">
+                  <Button fx:id="removeButton" mnemonicParsing="false" onAction="#removeFromWorkspace" text="Remove">
                      <HBox.margin>
                         <Insets left="40.0" top="10.0" />
                      </HBox.margin>
                   </Button>
                   <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="150.0" spacing="10.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Continue">
+                        <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueToPractice" text="Continue">
                            <VBox.margin>
                               <Insets top="10.0" />
                            </VBox.margin>
                         </Button>
-                        <CheckBox mnemonicParsing="false" prefHeight="20.0" prefWidth="125.0" text="Randomise Queue" />
+                        <CheckBox fx:id="randomiseBox" mnemonicParsing="false" prefHeight="20.0" prefWidth="125.0" text="Randomise Queue" />
                      </children>
                      <HBox.margin>
                         <Insets left="30.0" />
