--- a/src/namesayer/startMenu.fxml
+++ b/src/namesayer/startMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.StartMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.StartMenuController">
    <top>
       <Label text="Name Sayer" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -21,17 +21,17 @@
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="40.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="practiceButton" mnemonicParsing="false" onAction="#beginPractice" text="Practice">
+            <Button fx:id="practiceButton" mnemonicParsing="false" onAction="#beginPractice" prefWidth="200.0" text="Practice">
                <font>
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button fx:id="testButton" mnemonicParsing="false" onAction="#testMicrophone" text="Test Microphone">
+            <Button fx:id="testButton" mnemonicParsing="false" onAction="#testMicrophone" prefWidth="200.0" text="Test Microphone">
                <font>
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button fx:id="quitButton" mnemonicParsing="false" onAction="#quit" text="Quit">
+            <Button fx:id="quitButton" mnemonicParsing="false" onAction="#quit" prefWidth="200.0" text="Quit">
                <font>
                   <Font size="20.0" />
                </font>
