--- a/src/namesayer/css/styles.css
+++ b/src/namesayer/css/styles.css
@@ -5,5 +5,5 @@
 .button {
     -fx-background-color: "darkgrey";
     -fx-background-radius: 20;
-    -fx-background-insets: (0
+    -fx-background-insets: (0, 1, 1)
 }
