--- a/src/namesayer/workspace.fxml
+++ b/src/namesayer/workspace.fxml
@@ -16,7 +16,7 @@
    <children>
       <Pane prefHeight="500.0" prefWidth="700.0">
          <children>
-            <VBox alignment="CENTER" layoutX="318.0" layoutY="54.0" prefHeight="411.0" prefWidth="350.0" spacing="30.0">
+            <VBox alignment="CENTER" layoutX="324.0" layoutY="57.0" prefHeight="411.0" prefWidth="350.0" spacing="30.0">
                <children>
                   <Label fx:id="nowPlayingLabel" alignment="CENTER" prefHeight="13.0" prefWidth="276.0" text="Now Playing" textAlignment="CENTER">
                      <font>
@@ -57,7 +57,7 @@
                   </HBox>
                   <HBox prefHeight="421.0" prefWidth="297.0">
                      <children>
-                        <VBox prefHeight="391.0" prefWidth="132.0">
+                        <VBox prefHeight="421.0" prefWidth="142.0">
                            <children>
                               <VBox alignment="CENTER" prefHeight="423.0" prefWidth="132.0" spacing="10.0">
                                  <children>
@@ -71,18 +71,20 @@
                               </VBox>
                            </children>
                         </VBox>
-                        <VBox alignment="CENTER" prefHeight="391.0" prefWidth="142.0" spacing="10.0">
+                        <VBox alignment="CENTER" prefHeight="421.0" prefWidth="152.0" spacing="10.0">
                            <children>
                               <Label fx:id="ownCreationLabel" text="Own Creations">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
                               </Label>
-                              <ListView fx:id="ownListView" prefHeight="400.0" prefWidth="142.0" />
-                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                              <ListView fx:id="ownListView" prefHeight="418.0" prefWidth="142.0" />
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="5.0">
                                  <children>
-                                    <Button fx:id="creationPlayButton" mnemonicParsing="false" onAction="#creationPlayButtonClicked" text="Select" />
-                                    <Button fx:id="creationDeleteButton" mnemonicParsing="false" onAction="#creationDeleteButtonClicked" text="Delete" />
+                                    <Button fx:id="creationPreviousButtonClicked" mnemonicParsing="false" onAction="#creationPreviousButtonClicked" text="&lt;" />
+                                    <Button fx:id="creationPlayButtoncreationPlayButton" mnemonicParsing="false" onAction="#creationPlayButtonClicked" text="|&gt;" />
+                                    <Button fx:id="creationNextButton" mnemonicParsing="false" onAction="#creationNextButtonClicked" text="&gt;" />
+                                    <Button fx:id="creationDeleteButton" mnemonicParsing="false" onAction="#creationDeleteButtonClicked" text="D" />
                                  </children>
                                  <opaqueInsets>
                                     <Insets />
