--- a/src/namesayer/workspace.fxml
+++ b/src/namesayer/workspace.fxml
@@ -23,12 +23,13 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label fx:id="recordingNameLabel" alignment="CENTER" prefHeight="136.0" prefWidth="350.0">
+                  <Label fx:id="recordingNameLabel" alignment="CENTER" prefHeight="104.0" prefWidth="350.0">
                      <font>
                         <Font name="System Bold" size="30.0" />
                      </font>
                   </Label>
-                  <ProgressBar fx:id="progressBar" prefHeight="17.0" prefWidth="346.0" progress="0.0" />
+                  <Label fx:id="ratingLabel" />
+                  <ProgressBar fx:id="progressBar" prefHeight="26.0" prefWidth="346.0" progress="0.0" />
                   <HBox alignment="CENTER" prefHeight="78.0" prefWidth="350.0" spacing="20.0">
                      <children>
                         <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previousButtonClicked" prefHeight="33.0" prefWidth="84.0" text="Previous" />
