--- a/src/namesayer/record.fxml
+++ b/src/namesayer/record.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,18 +16,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.RecordController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.RecordController">
    <top>
-      <HBox alignment="CENTER" prefHeight="55.0" prefWidth="400.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="nameLabel" text="Recording Name" />
-            <TextField fx:id="nameTextField">
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
+      <HBox alignment="CENTER" prefHeight="20.0" prefWidth="400.0" BorderPane.alignment="CENTER" />
    </top>
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
@@ -32,7 +28,7 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <ProgressIndicator fx:id="progressIndicator" prefHeight="100.0" prefWidth="400.0" progress="0.0">
+            <ProgressIndicator fx:id="progressIndicator" prefHeight="130.0" prefWidth="400.0" progress="0.0">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
@@ -41,12 +37,12 @@
                <children>
                   <HBox alignment="CENTER" prefHeight="85.0" prefWidth="400.0" spacing="50.0">
                      <children>
-                        <Button fx:id="redoButton" mnemonicParsing="false" text="Redo" />
+                        <Button fx:id="redoButton" mnemonicParsing="false" onAction="#redoRecording" text="Redo" />
                         <Button fx:id="playButton" mnemonicParsing="false" text="Play" />
-                        <Button fx:id="keepButton" mnemonicParsing="false" text="Keep" />
+                        <Button fx:id="keepButton" mnemonicParsing="false" onAction="#keepRecording" text="Keep" />
                      </children>
                   </HBox>
-                  <Button fx:id="recordButton" mnemonicParsing="false" text="Record" />
+                  <Button fx:id="recordButton" mnemonicParsing="false" onAction="#record" text="Record" />
                </children>
             </StackPane>
          </children>
@@ -55,7 +51,7 @@
    <bottom>
       <HBox alignment="BOTTOM_LEFT" prefHeight="37.0" prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="returnButton" mnemonicParsing="false" text="Return">
+            <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnToWorkspace" text="Return">
                <HBox.margin>
                   <Insets bottom="15.0" left="15.0" />
                </HBox.margin>
