--- a/src/namesayer/workspace.fxml
+++ b/src/namesayer/workspace.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,11 +17,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceController">
    <children>
       <Pane prefHeight="500.0" prefWidth="700.0">
          <children>
-            <VBox alignment="CENTER" layoutX="324.0" layoutY="57.0" prefHeight="411.0" prefWidth="350.0" spacing="30.0">
+            <VBox alignment="CENTER" layoutX="311.0" layoutY="54.0" prefHeight="411.0" prefWidth="350.0" spacing="15.0">
                <children>
                   <Label fx:id="nowPlayingLabel" alignment="CENTER" prefHeight="13.0" prefWidth="276.0" text="Now Playing" textAlignment="CENTER">
                      <font>
@@ -30,72 +35,55 @@
                   </Label>
                   <Label fx:id="ratingLabel" />
                   <ProgressBar fx:id="progressBar" prefHeight="26.0" prefWidth="346.0" progress="0.0" />
-                  <HBox alignment="CENTER" prefHeight="78.0" prefWidth="350.0" spacing="20.0">
+                  <HBox alignment="CENTER" prefHeight="35.0" prefWidth="350.0" spacing="20.0">
                      <children>
-                        <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previousButtonClicked" prefHeight="33.0" prefWidth="84.0" text="Previous" />
-                        <Button fx:id="playButton" alignment="CENTER" mnemonicParsing="false" onAction="#playButtonClicked" prefHeight="35.0" prefWidth="69.0" text="Play" />
-                        <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonClicked" prefHeight="35.0" prefWidth="66.0" text="Next" />
+                        <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previousButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Previous" />
+                        <Button fx:id="playButton" alignment="CENTER" mnemonicParsing="false" onAction="#playButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Play" />
+                        <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Next" />
                      </children>
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="39.0" prefWidth="334.0" spacing="10.0">
+                  <Button fx:id="toggleButton" mnemonicParsing="false" onAction="#toggleTab" prefHeight="35.0" prefWidth="80.0" text="Toggle" />
+                  <HBox alignment="CENTER" prefHeight="35.0" prefWidth="334.0" spacing="10.0">
                      <children>
                         <Slider fx:id="volumeBar" prefHeight="33.0" prefWidth="162.0" />
-                        <Button fx:id="recordButton" mnemonicParsing="false" onAction="#recordButtonClicked" prefHeight="32.0" prefWidth="78.0" text="Record" />
-                        <Button fx:id="rateButton" mnemonicParsing="false" onAction="#rateButtonClicked" prefHeight="32.0" prefWidth="78.0" text="Rate" />
+                        <Button fx:id="recordButton" mnemonicParsing="false" onAction="#recordButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Record" />
+                        <Button fx:id="rateButton" mnemonicParsing="false" onAction="#rateButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Rate" />
                      </children>
                   </HBox>
                </children>
             </VBox>
-            <VBox layoutX="21.0" layoutY="15.0" prefHeight="471.0" prefWidth="303.0">
+            <VBox layoutX="21.0" layoutY="15.0" prefHeight="470.0" prefWidth="250.0" spacing="15.0">
                <children>
-                  <HBox prefHeight="36.0" prefWidth="303.0">
-                     <children>
-                        <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="421.0" prefWidth="297.0">
-                     <children>
-                        <VBox prefHeight="421.0" prefWidth="142.0">
-                           <children>
-                              <VBox alignment="CENTER" prefHeight="423.0" prefWidth="132.0" spacing="10.0">
+                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButtonClicked" text="Back" />
+                  <TabPane fx:id="tabPane" prefHeight="450.0" prefWidth="250.0" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                      <Tab text="Demo's">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Label fx:id="nextLabel" text="Up Next">
-                                       <font>
-                                          <Font size="18.0" />
-                                       </font>
-                                    </Label>
-                                    <ListView fx:id="dataListView" prefHeight="391.0" prefWidth="132.0" />
+                                    <ListView fx:id="dataListView" prefHeight="358.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                  </children>
-                              </VBox>
-                           </children>
-                        </VBox>
-                        <VBox alignment="CENTER" prefHeight="421.0" prefWidth="152.0" spacing="10.0">
-                           <children>
-                              <Label fx:id="ownCreationLabel" text="Own Creations">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
-                              <ListView fx:id="ownListView" prefHeight="418.0" prefWidth="142.0" />
-                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                      <Tab text="Personal Recordings">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Button fx:id="creationPreviousButtonClicked" mnemonicParsing="false" onAction="#creationPreviousButtonClicked" text="&lt;" />
-                                    <Button fx:id="creationPlayButtoncreationPlayButton" mnemonicParsing="false" onAction="#creationPlayButtonClicked" text="|&gt;" />
-                                    <Button fx:id="creationNextButton" mnemonicParsing="false" onAction="#creationNextButtonClicked" text="&gt;" />
-                                    <Button fx:id="creationDeleteButton" mnemonicParsing="false" onAction="#creationDeleteButtonClicked" text="D" />
+                                    <ListView fx:id="ownListView" prefHeight="377.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                  </children>
-                                 <opaqueInsets>
-                                    <Insets />
-                                 </opaqueInsets>
-                                 <VBox.margin>
-                                    <Insets />
-                                 </VBox.margin>
-                              </HBox>
-                           </children>
-                        </VBox>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                    </tabs>
+                  </TabPane>
+                  <HBox alignment="BOTTOM_LEFT" prefHeight="25.0" prefWidth="200.0" spacing="50.0">
+                     <children>
+                        <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnToStart" text="Return to menu" />
+                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#creationDeleteButtonClicked" text="Delete" />
                      </children>
                   </HBox>
                </children>
