--- a/src/namesayer/workSpaceCreator.fxml
+++ b/src/namesayer/workSpaceCreator.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -12,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceCreatorController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceCreatorController">
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
@@ -31,12 +36,7 @@
                   <Insets left="20.0" />
                </VBox.margin>
             </Pane>
-            <TextField fx:id="textField">
-               <VBox.margin>
-                  <Insets left="20.0" />
-               </VBox.margin>
-            </TextField>
-            <ListView fx:id="databaseRecordingsView" prefHeight="325.0" prefWidth="200.0">
+            <ListView fx:id="databaseRecordingsView" prefHeight="350.0" prefWidth="200.0">
                <VBox.margin>
                   <Insets left="20.0" />
                </VBox.margin>
@@ -88,14 +88,14 @@
                         <Button fx:id="removeButton" mnemonicParsing="false" onAction="#removeFromWorkspace" text="Remove" />
                      </children>
                   </Pane>
-                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="150.0" spacing="10.0">
+                  <VBox alignment="TOP_CENTER" prefHeight="75.0" prefWidth="202.0" spacing="10.0">
                      <children>
                         <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueToPractice" text="Continue">
                            <VBox.margin>
                               <Insets top="10.0" />
                            </VBox.margin>
                         </Button>
-                        <CheckBox fx:id="randomiseBox" mnemonicParsing="false" prefHeight="20.0" prefWidth="125.0" text="Randomise Queue" />
+                        <CheckBox fx:id="randomiseBox" mnemonicParsing="false" prefHeight="20.0" prefWidth="150.0" text="Randomise Queue" />
                      </children>
                      <HBox.margin>
                         <Insets left="30.0" />
