--- a/src/namesayer/workspace.fxml
+++ b/src/namesayer/workspace.fxml
@@ -23,9 +23,9 @@
          <children>
             <VBox alignment="CENTER" layoutX="311.0" layoutY="54.0" prefHeight="411.0" prefWidth="350.0" spacing="15.0">
                <children>
-                  <Label fx:id="nowPlayingLabel" alignment="CENTER" prefHeight="13.0" prefWidth="276.0" text="Now Playing" textAlignment="CENTER">
+                  <Label fx:id="playingLabel" alignment="CENTER" prefHeight="21.0" prefWidth="350.0" text="Now Playing: Demo Recording (Database)" textAlignment="CENTER">
                      <font>
-                        <Font size="18.0" />
+                        <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                   <Label fx:id="recordingNameLabel" alignment="CENTER" prefHeight="104.0" prefWidth="350.0">
@@ -34,7 +34,6 @@
                      </font>
                   </Label>
                   <Label fx:id="ratingLabel" />
-                  <ProgressBar fx:id="progressBar" prefHeight="26.0" prefWidth="346.0" progress="0.0" />
                   <HBox alignment="CENTER" prefHeight="35.0" prefWidth="350.0" spacing="20.0">
                      <children>
                         <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previousButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Previous" />
@@ -48,7 +47,6 @@
                   <Button fx:id="toggleButton" mnemonicParsing="false" onAction="#toggleTab" prefHeight="35.0" prefWidth="80.0" text="Toggle" />
                   <HBox alignment="CENTER" prefHeight="35.0" prefWidth="334.0" spacing="10.0">
                      <children>
-                        <Slider fx:id="volumeBar" prefHeight="33.0" prefWidth="162.0" />
                         <Button fx:id="recordButton" mnemonicParsing="false" onAction="#recordButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Record" />
                         <Button fx:id="rateButton" mnemonicParsing="false" onAction="#rateButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Rate" />
                      </children>
