--- a/src/namesayer/testMicrophone.fxml
+++ b/src/namesayer/testMicrophone.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -29,23 +28,26 @@
                   <Font size="36.0" />
                </font>
             </Label>
-            <Label text="Audio will be recorded for 5 seconds and played back." />
-            <ImageView fitHeight="112.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../Downloads/voice-mic-ios-7-interface-symbol_318-33733.jpg" />
-               </image>
-            </ImageView>
-            <ProgressBar fx:id="progressBar" prefHeight="20.0" prefWidth="267.0" progress="0.0" />
-            <StackPane prefHeight="86.0" prefWidth="700.0">
+            <Label prefHeight="44.0" prefWidth="548.0" text="Press Test to start the microphone test. You should see a blue bar moving as you speak." />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Button fx:id="playButton" mnemonicParsing="false" onAction="#playButtonClicked" prefHeight="35.0" prefWidth="62.0" text="Play" />
-                  <Button fx:id="testButton" mnemonicParsing="false" onAction="#testButtonClicked" text="Test">
+                  <ImageView fitHeight="112.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../Downloads/voice-mic-ios-7-interface-symbol_318-33733.jpg" />
+                     </image>
+                  </ImageView>
+                  <ProgressBar fx:id="progressBar" prefHeight="64.0" prefWidth="460.0" progress="0.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="86.0" prefWidth="700.0" spacing="50.0">
+               <children>
+                  <Button fx:id="testButton" alignment="CENTER" mnemonicParsing="false" onAction="#testButtonClicked" text="Test">
                      <font>
-                        <Font size="18.0" />
+                        <Font name="System Bold" size="18.0" />
                      </font>
                   </Button>
                </children>
-            </StackPane>
+            </HBox>
          </children>
       </VBox>
    </children>
