--- a/src/namesayer/workspace.fxml
+++ b/src/namesayer/workspace.fxml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.WorkSpaceController">
    <children>
       <Pane prefHeight="500.0" prefWidth="700.0">
          <children>
-            <VBox alignment="CENTER" layoutX="311.0" layoutY="54.0" prefHeight="411.0" prefWidth="350.0" spacing="15.0">
+            <VBox alignment="CENTER" layoutX="311.0" layoutY="41.0" prefHeight="424.0" prefWidth="350.0" spacing="15.0">
                <children>
                   <Label fx:id="playingLabel" alignment="CENTER" prefHeight="21.0" prefWidth="350.0" text="Now Playing: Demo Recording (Database)" textAlignment="CENTER">
                      <font>
@@ -33,8 +30,9 @@
                         <Font name="System Bold" size="30.0" />
                      </font>
                   </Label>
+                  <ProgressBar fx:id="progressBar" prefHeight="20.0" prefWidth="295.0" progress="0.0" />
                   <Label fx:id="ratingLabel" />
-                  <HBox alignment="CENTER" prefHeight="35.0" prefWidth="350.0" spacing="20.0">
+                  <HBox alignment="CENTER" prefHeight="35.0" prefWidth="350.0" spacing="10.0">
                      <children>
                         <Button fx:id="previousButton" mnemonicParsing="false" onAction="#previousButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Previous" />
                         <Button fx:id="playButton" alignment="CENTER" mnemonicParsing="false" onAction="#playButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Play" />
@@ -45,11 +43,15 @@
                      </opaqueInsets>
                   </HBox>
                   <Button fx:id="toggleButton" mnemonicParsing="false" onAction="#toggleTab" prefHeight="35.0" prefWidth="80.0" text="Toggle" />
-                  <HBox alignment="CENTER" prefHeight="35.0" prefWidth="334.0" spacing="10.0">
+                  <HBox alignment="CENTER" prefHeight="35.0" prefWidth="334.0" spacing="15.0">
                      <children>
+                        <Slider fx:id="volumeSlider" blockIncrement="0.1" max="1.0" prefHeight="26.0" prefWidth="106.0" />
                         <Button fx:id="recordButton" mnemonicParsing="false" onAction="#recordButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Record" />
                         <Button fx:id="rateButton" mnemonicParsing="false" onAction="#rateButtonClicked" prefHeight="35.0" prefWidth="80.0" text="Rate" />
                      </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                   </HBox>
                </children>
             </VBox>
