--- a/AnotherDuplicatelol/src/namesayer/startMenu.fxml
+++ b/AnotherDuplicatelol/src/namesayer/startMenu.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.StartMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="namesayer.StartMenuController">
    <top>
       <Label text="Name Sayer" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -19,9 +19,14 @@
       </Label>
    </top>
    <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="40.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="practiceButton" mnemonicParsing="false" onAction="#beginPractice" prefWidth="200.0" text="Practice">
+            <Button fx:id="practiceButton" mnemonicParsing="false" onAction="#beginPractice" prefWidth="200.0" text="New Practice">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Button fx:id="playListButton" mnemonicParsing="false" onAction="#playlistButtonClicked" prefWidth="200.0" text="Load Playlist">
                <font>
                   <Font size="20.0" />
                </font>
