--- a/AnotherDuplicatelol/src/namesayer/testMicrophone.fxml
+++ b/AnotherDuplicatelol/src/namesayer/testMicrophone.fxml
@@ -41,7 +41,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="86.0" prefWidth="700.0" spacing="50.0">
                <children>
-                  <Button fx:id="testButton" alignment="CENTER" mnemonicParsing="false" onAction="#testButtonClicked" text="Test">
+                  <Button fx:id="testStopButton" alignment="CENTER" mnemonicParsing="false" onAction="#testStopButtonClicked" text="Test">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
