--- a/AnotherDuplicatelol/src/namesayer/record.fxml
+++ b/AnotherDuplicatelol/src/namesayer/record.fxml
@@ -3,7 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
@@ -17,16 +18,34 @@
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="instructionLabel" text="Press to begin recording for five seconds">
+            <Label prefHeight="29.0" prefWidth="182.0" text="New Recording">
                <font>
-                  <Font name="System Bold" size="13.0" />
+                  <Font size="24.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="instructionLabel" text="Press record to start recording">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin></Label>
+            <ImageView fitHeight="72.0" fitWidth="105.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../Downloads/Antu_mic-on.svg.png" />
+               </image>
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </ImageView>
+            <Label fx:id="statusLabel">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="16.0" />
                </font>
             </Label>
-            <ProgressIndicator fx:id="progressIndicator" prefHeight="130.0" prefWidth="400.0" progress="0.0">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </ProgressIndicator>
             <StackPane prefHeight="60.0" prefWidth="400.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="85.0" prefWidth="400.0" spacing="20.0">
@@ -38,13 +57,9 @@
                      </children>
                   </HBox>
                   <Button fx:id="recordButton" mnemonicParsing="false" onAction="#record" text="Record" />
+                  <Button fx:id="stopButton" alignment="CENTER" mnemonicParsing="false" onAction="#stopButtonClicked" prefHeight="27.0" prefWidth="60.0" text="Stop" />
                </children>
             </StackPane>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Button fx:id="stop" alignment="CENTER" mnemonicParsing="false" onAction="#stopButtonClicked" text="Stop" />
-               </children>
-            </HBox>
          </children>
       </VBox>
    </center>
