--- a/AnotherDuplicatelol/src/namesayer/workSpaceCreator.fxml
+++ b/AnotherDuplicatelol/src/namesayer/workSpaceCreator.fxml
@@ -53,7 +53,7 @@
       </VBox>
    </left>
    <right>
-      <VBox alignment="CENTER_LEFT" prefHeight="425.0" prefWidth="198.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER_LEFT" prefHeight="414.0" prefWidth="198.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Currently Selected">
                <font>
@@ -63,7 +63,7 @@
                   <Insets />
                </VBox.margin>
             </Label>
-            <ListView fx:id="workspaceRecordingsView" prefHeight="335.0" prefWidth="178.0">
+            <ListView fx:id="workspaceRecordingsView" prefHeight="337.0" prefWidth="178.0">
                <VBox.margin>
                   <Insets right="20.0" top="5.0" />
                </VBox.margin>
@@ -128,7 +128,7 @@
       </VBox>
    </center>
    <top>
-      <Label prefHeight="44.0" prefWidth="664.0" text="Select Names" BorderPane.alignment="CENTER">
+      <Label alignment="CENTER" prefHeight="44.0" prefWidth="664.0" text="Select Names" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold" size="36.0" />
          </font>
