--- a/AnotherDuplicatelol/src/namesayer/workSpaceCreator.fxml
+++ b/AnotherDuplicatelol/src/namesayer/workSpaceCreator.fxml
@@ -42,7 +42,7 @@
                   <Insets />
                </VBox.margin>
                <children>
-                  <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnToMenu" text="Return">
+                  <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnButtonClicked" text="Return">
                      <HBox.margin>
                         <Insets bottom="10.0" left="20.0" />
                      </HBox.margin>
